--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "mysql2": "^3.11.5",
+    "nodemon": "^3.1.7",
+    "prisma": "^6.1.0"
   },
-   "scripts": {
+  "scripts": {
     "start": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
